source/assets/stylesheets/components/_social-links.scss
.social-links {
  background-color: $dark-gray;
  line-height: normal;
  padding: 2em 0;
  position: relative;
  text-align: center;

  @include grid-media($for-desktop-up) {
    background-color: transparent;
    padding: 1em;
    position: fixed;
    right: 0;
    top: 0;
  }

  [class^="icon-"],
  [class*=" icon-"] {
    background-color: $white;
    border-radius: 50%;
    color: $dark-gray;
    font-size: $base-font-size * 1.2;
    margin: 0 0.2em;
    padding: $base-spacing * 0.4;

    @include grid-media($for-desktop-up) {
      background-color: $slightly-desaturated-orange;
      color: $white;
      font-size: 1em;
      margin: 0 0.1em;
    }

    &:hover {
      background-color: lighten($dark-gray, 50%);

      @include grid-media($for-desktop-up) {
        background-color: darken($slightly-desaturated-orange, 10%);
      }
    }
  }
}

